<resources>
    <string name="app_name">Contact Database Curd Opertion</string>
    <string name="btn_insert">Add To sqlite</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="enter_e_mail">Enter E_mail</string>
    <string name="contact_book">Contact Book</string>
    <string name="contentDesc_FloatingBtn">floatingButton</string>
    <string name="contentDesc_imageview">imageView</string>
    <string name="recyclerview_item_e_mail">E_mail</string>
    <string name="recyclerview_item_contact">Contact</string>
    <string name="recyclerview_item_name">Name</string>
    <string name="id">ID</string>
</resources>