<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="16dp"
    app:cardCornerRadius="3dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="#C9EEFF">

    <LinearLayout
        android:id="@+id/AllTextData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_item_name"
            android:textColor="@color/purple_500"
            android:textSize="25sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_item_contact"
            android:textColor="#404040"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/textE_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recyclerview_item_e_mail"
            android:textColor="#404040"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textStyle="italic"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>